src/objects/Apttus_Config2__ProductConfiguration__c.object
<CustomObject>
    <description>Represents a product configuration</description>
    <fields>
        <fullName>Apttus_Config2__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the sold to account</description>
        <inlineHelpText>ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Configurations (Sold To)</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AncestorId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ancestor configuration</description>
        <label>Ancestor</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Derived Configurations</relationshipLabel>
        <relationshipName>DerivedConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ApprovalStatus__c</fullName>
        <description>The quote/agreement/standard approval indicator. Not applicable when cart approval is in effect.</description>
        <inlineHelpText>The quote/agreement/standard approval indicator. Not applicable when cart approval is in effect.</inlineHelpText>
        <label>Approval Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseRelationCount__c</fullName>
        <description>Counts the number of line items related to base product.</description>
        <label>Base Relation Count</label>
        <summaryFilterItems>
            <field>Apttus_Config2__LineItem__c.Apttus_Config2__HasBaseProduct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Configurations (Bill To)</relationshipLabel>
        <relationshipName>ConfigurationsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObjectId__c</fullName>
        <description>ID of the business object associated with the configuration</description>
        <label>Business Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObjectRefId__c</fullName>
        <description>ID of the business object associated with the configuration</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the business object associated with the configuration</inlineHelpText>
        <label>Business Object Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObjectType__c</fullName>
        <description>The type of the business object associated with the configuration</description>
        <label>Business Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                    <default>true</default>
                    <label>Agreement</label>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Collaboration Request</fullName>
                </value>
                <value>
                    <fullName>Favorite Configuration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartDataCache2__c</fullName>
        <description>The cart data cache</description>
        <inlineHelpText>The cart data cache</inlineHelpText>
        <label>Cart Data Cache 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartDataCache__c</fullName>
        <description>The cart data cache</description>
        <inlineHelpText>The cart data cache</inlineHelpText>
        <label>Cart Data Cache</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollaborationRequestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Collaboration Request business object.</description>
        <inlineHelpText>Lookup to the Collaboration Request business object.</inlineHelpText>
        <label>Collaboration Request</label>
        <referenceTo>Apttus_Config2__CollaborationRequest__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Comments__c</fullName>
        <description>memo text entered by the user</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractNumbers__c</fullName>
        <description>A comma separated list of contract numbers associated wth the cart</description>
        <label>Contract Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CostRollupInfo__c</fullName>
        <description>Contains JSON string with Cost Rollup information showing how the Costs are rolled up from a child all the way to the topmost parent.</description>
        <inlineHelpText>Contains JSON string with Cost Rollup information showing how the Costs are rolled up from a child all the way to the topmost parent.</inlineHelpText>
        <label>Cost Rollup Info</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CouponCodes__c</fullName>
        <description>A comma separated list of coupon codes associated wth the cart</description>
        <inlineHelpText>A comma separated list of coupon codes associated wth the cart</inlineHelpText>
        <label>Coupon Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CurrentActiveTask__c</fullName>
        <description>The current active task for the cart</description>
        <inlineHelpText>The current active task for the cart</inlineHelpText>
        <label>Current Active Task</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloning Attribute Values</fullName>
                </value>
                <value>
                    <fullName>Cloning Detail Objects</fullName>
                </value>
                <value>
                    <fullName>Cloning Usage Tiers</fullName>
                </value>
                <value>
                    <fullName>Cloning Adjustment Line Items</fullName>
                </value>
                <value>
                    <fullName>Cloning Price Breakups</fullName>
                </value>
                <value>
                    <fullName>Cloning Tax Breakups</fullName>
                </value>
                <value>
                    <fullName>Cloning Agreement Price Rules</fullName>
                </value>
                <value>
                    <fullName>Cloning Agreement Price Tier</fullName>
                </value>
                <value>
                    <fullName>Cloning Rule Information</fullName>
                </value>
                <value>
                    <fullName>Cloning Expression Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CurrentUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the User Id of the User who accessed this configuration in edit mode</description>
        <inlineHelpText>Holds the User Id of the User who accessed this configuration in edit mode</inlineHelpText>
        <label>Current User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the product configuration</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The configuration effective date.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectivePriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the price list effective for the configuration</description>
        <inlineHelpText>ID of the price list effective for the configuration</inlineHelpText>
        <label>Effective Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Configurations (Effective)</relationshipLabel>
        <relationshipName>Configurations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpectedEndDate__c</fullName>
        <description>The expected end date for products and services</description>
        <label>Expected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpectedStartDate__c</fullName>
        <description>The expected start date for products and services</description>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FinalizedDate__c</fullName>
        <description>Date when the configuration was finalized</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPricePending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether pricing is pending for line items in the configuration</description>
        <label>Is Price Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsTaskPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are any tasks pending for the cart</description>
        <inlineHelpText>Indicates whether there are any tasks pending for the cart</inlineHelpText>
        <label>Is Task Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsTransient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates a transient configuration version that may get abandoned. A new configuration version is in transient state until the version is explicitly saved by the user.</description>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsValidationPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the need of revalidation due to probable changes in configuration</description>
        <inlineHelpText>Flag to indicate the need of revalidation due to probable changes in configuration</inlineHelpText>
        <label>Is Validation Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemsAwaitingPrice__c</fullName>
        <description>A comma separated list of line item numbers awaiting pricing</description>
        <label>Line Items Awaiting Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfItems__c</fullName>
        <description>Indicates the number of line items associated with the product configuration</description>
        <label>Number Of Items</label>
        <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated order</description>
        <inlineHelpText>ID of the associated order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the configuration</description>
        <inlineHelpText>ID of the payment term associated with the configuration</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the price list associated with the configuration</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PrimordialId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primordial configuration</description>
        <label>Primordial</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Descendant Configurations</relationshipLabel>
        <relationshipName>DescendantConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalAdjustmentAmount__c</fullName>
        <description>The renewal price adjustment amount.</description>
        <inlineHelpText>The renewal price adjustment amount.</inlineHelpText>
        <label>Renewal Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalAdjustmentType__c</fullName>
        <description>The renewal price adjustment type</description>
        <inlineHelpText>The renewal price adjustment type</inlineHelpText>
        <label>Renewal Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Uplift</fullName>
                </value>
                <value>
                    <fullName>Uplift Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Configurations (Ship To)</relationshipLabel>
        <relationshipName>ConfigurationsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The current status of the configuration</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready For Approvals</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>In Collaboration</fullName>
                </value>
                <value>
                    <fullName>Ready For Finalization</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SummaryGroupType__c</fullName>
        <description>The summary group preference</description>
        <label>Summary Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                    <default>true</default>
                    <label>Category</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__VersionNumber__c</fullName>
        <description>The version number. The number increments with each version of the configuration, for example, 1, 2, 3.</description>
        <label>Version Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Proposald__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the quote/proposal associated with the configuration</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Configuration</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>